--- a/proposal.qmd
+++ b/proposal.qmd
@@ -70,7 +70,7 @@ head(ufo_sightings)
 
 **Question 1:**
 
-What are the Numbers of UFO sightings Globally ? Are there specific regions where sightings occur more frequently ? Correlating Population Density to the amount of Sighting to Identify if there are any region more prone to UFO activities
+What are the Numbers of UFO sightings Globally ? Are there specific regions where sightings occur more frequently ?
 
 **Question 2:**
 
